# PicoEngine

./: .gitignore  CMakeLists.txt  embed.cpp  main.cpp  maths.cpp  maths.h  native_main.cpp  serial.sh  test.py
include/: ECS.h  common.h  fixed.h  mathematics.h  time.hpp
include/ECS/: component.h  entity.h
include/ecs/: object.h
include/game/: shaders.h
include/hardware/: input.h  joystick.h  st7789.h
include/mathematics/: basic.h  fixed.h  matrix.h  quaternion.h  rendering.h  vector.h
include/rendering/: color.h  font.h  frame.h  mesh.h  postprocessing.h  renderer.h  shader.h  texture.h
include/tests/: maths_tests.h  rendering_tests.h
lib/: CMakeLists.txt
lib/lodepng/: CMakeLists.txt
res/: CMakeLists.txt  embed.cpp  font.psf  main.font  main_font.cpp
src/: time.cpp
src/ECS/: entity.cpp
src/game/: main.cpp
src/hardware/: input.cpp  screen_double.pio
src/mathematics/: vector.cpp
src/rendering/: color.cpp  postprocessing.cpp  renderer.cpp
